--- a/debian/control
+++ b/debian/control
@@ -4,8 +4,8 @@ Priority: optional
 Maintainer: Pod <monsieur.pod@gmail.com>
 Build-Depends: debhelper (>= 8.0.0),
                autotools-dev,
-               libcairo2-dev,
                libgstreamer1.0-dev,
+               libgles2-mesa-dev,
                fonts-dejavu-core
 Standards-Version: 3.9.4
 
