--- a/debian/control
+++ b/debian/control
@@ -5,7 +5,7 @@ Maintainer: Pod <monsieur.pod@gmail.com>
 Build-Depends: debhelper (>= 8.0.0),
                autotools-dev,
                libgstreamer1.0-dev,
-               libgles2-mesa-dev,
+               libraspberrypi-dev,
                fonts-dejavu-core
 Standards-Version: 3.9.4
 
